--- a/agro-bridge/package.json
+++ b/agro-bridge/package.json
@@ -11,7 +11,9 @@
     "prettier": "prettier --config prettier.config.js --write ."
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.6",
