--- a/agro-bridge/package.json
+++ b/agro-bridge/package.json
@@ -28,8 +28,10 @@
     "cmdk": "^1.1.1",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.554.0",
+    "mailtrap": "^4.3.2",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
@@ -45,6 +47,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/leaflet": "^1.9.21",
     "@types/lodash": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^19",
